# echomill

./: .clang-format  .clang-tidy  .gitignore  LICENSE  README.md  conv.txt  format.sh  make.sh
.github/workflows/: e2e-tests.yml  unit-tests.yml
client/: CMakeLists.txt  client.py
client/src/: CMakeLists.txt
client/test/: CMakeLists.txt
config/: instruments.json
docs/: architecture.md  codingguidelines.md  core_architecture.md  docs.md  overview.md
e2etest/: CMakeLists.txt  runner.py
e2etest/scenarios/: 01_basic_matching.json  02_market_sweep.json  03_cancellation.json  04_partial_fill.json  05_price_improvement.json  06_fifo_priority.json  07_limit_sweep_and_rest.json  08_invalid_orders.json  09_cross_symbol_isolation.json  10_id_collision.json  11_multiple_levels_depth.json  12_cancel_non_existent.json  13_aggressive_limit_buy_multiple_levels.json  14_market_sell_sweep.json  15_status_consistency.json
e2etest/src/: CMakeLists.txt
e2etest/test/: CMakeLists.txt
echomill/: CMakeLists.txt
echomill/src/: CMakeLists.txt  booklevel.hpp  instrument.hpp  instrumentmanager.cpp  instrumentmanager.hpp  jsonutils.hpp  main.cpp  order.hpp  orderbook.cpp  orderbook.hpp  pricelevel.cpp  pricelevel.hpp  server.cpp  server.hpp  trade.hpp  types.hpp
echomill/test/: CMakeLists.txt  test_instrumentmanager.cpp  test_integration.cpp  test_lib.cpp  test_matching.cpp  test_orderbook.cpp  test_pricelevel.cpp  test_server.cpp
